// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration should return results from real server: no options 1`] = `
{
  "brand": "Conroy, Hudson and Kessler",
  "description": "Andy shoes are designed to keeping in mind durability as well as trends, the most stylish range of shoes & sandals",
  "id": 11,
  "name": "Modern Plastic Keyboard",
  "price": 13,
}
`;

exports[`integration should return results from real server: with options 1`] = `
{
  "_highlightResult": {
    "description": {
      "fullyHighlighted": false,
      "matchLevel": "full",
      "matchedWords": [],
      "value": "Andy shoes are __ais-highlight__designed__/ais-highlight__ to keeping in mind durability as well as trends, the most",
    },
    "name": {
      "fullyHighlighted": false,
      "matchLevel": "full",
      "matchedWords": [],
      "value": "Modern Plastic __ais-highlight__Keyboard__/ais-highlight__",
    },
  },
  "description": "Andy shoes are designed to keeping in mind durability as well as trends, the most stylish range of shoes & sandals",
  "id": 11,
  "name": "Modern Plastic Keyboard",
  "price": 13,
}
`;
